# punchgate

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.e2e  README.md  compose.yaml
cli/: Cargo.toml
cli/src/: behaviour.rs  external_addr.rs  identity.rs  lib.rs  nat_primer.rs  nat_probe.rs  nat_probe_protocol.rs  node.rs  port_mapping.rs  protocol.rs  service.rs  shutdown.rs  state.rs  test_utils.rs  traits.rs  tunnel.rs  types.rs
cli/src/node/: connection_state.rs  execute.rs  mod.rs  translate.rs
cli/src/state/: app.rs  command.rs  event.rs  mod.rs  peer.rs  tunnel.rs
cli/tests/: integration.rs
deploy/launchd/: com.punchgate.daemon.plist
deploy/systemd/: punchgate.service
docs/: ARCHITECTURE.md  PRODUCTION_DESIGN.md
docs/plans/: 2026-02-12-reactive-architecture-design.md  2026-02-13-quic-only-migration-design.md  2026-02-13-quic-only-migration.md  2026-02-16-dcutr-holepunch-proof-design.md  2026-02-16-dcutr-holepunch-proof.md  2026-02-16-native-pipeline-simplification-design.md  2026-02-16-native-pipeline-simplification.md  2026-02-17-nat-traversal-reliability-design.md  2026-02-17-nat-traversal-reliability.md  2026-02-18-nat-holepunch-diagnostics-design.md  2026-02-18-nat-holepunch-diagnostics.md  2026-02-18-nat-stun-diagnostics-design.md  2026-02-18-nat-stun-diagnostics.md  2026-02-18-nat-traversal-hardening-design.md  2026-02-18-nat-traversal-hardening.md  2026-02-18-upnp-port-mapping-design.md  2026-02-18-upnp-port-mapping.md  2026-02-19-codebase-simplification-design.md  2026-02-19-codebase-simplification.md
scripts/: container-entrypoint.sh  create-user.sh  e2e_compose_test.sh  e2e_tunnel_test.sh  echo_server.py  log_connections.py  log_latency.py  log_parse.py  log_phases.py  log_summary.py  log_tunnels.py  nat-entrypoint.sh
src/: behaviour.rs  identity.rs  main.rs  port_mapping.rs  protocol.rs  specs.rs  tunnel.rs
src/node/: backoff.rs  connection_state.rs  execute.rs  mod.rs  translate.rs
src/state/: app.rs  command.rs  event.rs  mod.rs  peer.rs  tunnel.rs
tests/: integration.rs
