[workspace]
resolver = "3"
members = ["cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
libp2p = { version = "0.56.0", features = [
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "quic",
    "relay",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }
libp2p-stream = "0.4.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14"
proptest = "1"
tempfile = "3"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
