[package]
name = "cli"
version.workspace = true
edition.workspace = true

[features]
default = ["mdns"]
mdns = ["libp2p/mdns"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
